--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <build>
+  <dependencies>
+      <dependency>
+          <groupId>org.jetbrains.kotlin</groupId>
+          <artifactId>kotlin-stdlib-jdk8</artifactId>
+          <version>1.2.51</version>
+      </dependency>
+  </dependencies>
 
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-ssh-external</artifactId>
-        <version>2.8</version>
-      </extension>
-    </extensions>
+  <build>
 
     <plugins>
 
