--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,29 @@
   <packaging>pom</packaging>
 
   <dependencies>
+
       <dependency>
           <groupId>org.jetbrains.kotlin</groupId>
           <artifactId>kotlin-stdlib-jdk8</artifactId>
           <version>1.2.51</version>
       </dependency>
+
+    <dependency>
+        <groupId>com.mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.44</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/submodules/rcdb/java/lib/mysql-connector-java-5.1.44-bin.jar</systemPath>
+    </dependency>
+
+    <dependency>
+        <groupId>org.xerial</groupId>
+        <artifactId>sqlite-jdbc</artifactId>
+        <version>3.20.0</version>
+        <scope>system</scope>
+        <systemPath>${project.basedir}/submodules/rcdb/java/lib/sqlite-jdbc-3.20.0.jar</systemPath>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -32,7 +50,7 @@
                     <configuration>
                         <sourceDirs>
                             <source>src/main/java/org/jlab/ccdb</source>
-                            <source>src/main/java/org/jlab/rcdb</source>
+                            <!--<source>src/main/java/org/jlab/rcdb</source>-->
                         </sourceDirs>
                     </configuration>
                 </execution>
