--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 						<configuration>
 							<sourceDirs>
 								<source>src/main/java/org/jlab/ccdb</source>
-							    <source>src/main/java/org/jlab/rcdb</source>
+								<source>src/main/java/org/jlab/rcdb</source>
 							</sourceDirs>
 						</configuration>
 					</execution>
@@ -92,6 +92,45 @@
 					</archive>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<outputFile>target/ccdb-rcdb-${project.version}-with-dependencies.jar</outputFile>
+					<filters>
+						<filter>
+							<artifact>*:*</artifact>
+							<excludes>
+								<exclude>META-INF/*.SF</exclude>
+								<exclude>META-INF/*.DSA</exclude>
+								<exclude>META-INF/*.RSA</exclude>
+							</excludes>
+						</filter>
+					</filters>
+					<transformers>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<manifestEntries>
+								<Specification-Title>${project.artifactId}</Specification-Title>
+								<Specification-Version>${project.version}</Specification-Version>
+								<Implementation-Title>${project.artifactId}</Implementation-Title>
+								<Implementation-Version>${project.version}</Implementation-Version>
+								<Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
+							</manifestEntries>
+						</transformer>
+					</transformers>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 
 		</plugins>
 
